# simple-networked-pong

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
assets/shaders/: background.wgsl
src/: config.rs  main.rs  network.rs  simulation.rs  states.rs  ui.rs  visuals.rs
web/: CNAME  index.html
