[package]
name = "pong"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking", "bevy/debug"]

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    "2d",
] }
bevy_egui = "0.39.1"
bevy_matchbox = "0.14.0"
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
